--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
+enable_testing()
+add_subdirectory(compiler)
 add_subdirectory(common)
 add_subdirectory(tools)
