--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,13 +1,29 @@
+include_directories(../gsl-lite/include)
+include_directories(../optional-lite/include)
 include_directories(../onnx/.setuptools-cmake-build)
 include_directories(..)
 
 add_executable(dump_onnx dump_onnx.cc)
-target_link_libraries(dump_onnx onnx_proto)
-target_link_libraries(dump_onnx protobuf)
+target_link_libraries(dump_onnx
+  onnx_proto
+  protobuf
+  )
 set_target_properties(dump_onnx PROPERTIES OUTPUT_NAME "dump_onnx")
 
 add_executable(dump_tensor dump_tensor.cc)
-target_link_libraries(dump_tensor oniku_compiler)
-target_link_libraries(dump_tensor onnx_proto)
-target_link_libraries(dump_tensor protobuf)
+target_link_libraries(dump_tensor
+  oniku_compiler
+  onnx_proto
+  protobuf
+  )
 set_target_properties(dump_tensor PROPERTIES OUTPUT_NAME "dump_tensor")
+
+add_executable(run_onnx run_onnx.cc)
+target_link_libraries(run_onnx
+  oniku_compiler
+  oniku_runtime
+  xchainer
+  onnx_proto
+  protobuf
+  )
+set_target_properties(run_onnx PROPERTIES OUTPUT_NAME "run_onnx")
