--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(runtime_test
   )
 target_link_libraries(runtime_test
   oniku_runtime
+  oniku_compiler
   xchainer
   onnx_proto
   protobuf
