Generate backprop tests in CMake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,5 @@ add_subdirectory(compiler)
 add_subdirectory(common)
 add_subdirectory(feeder)
 add_subdirectory(runtime)
+add_subdirectory(scripts)
 add_subdirectory(tools)
