Move some functions from tools to common/strutil

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,9 +1,14 @@
 include_directories(..)
+add_library(oniku_common
+  strutil.cc
+  )
+
 include_directories(../googletest/googletest/include)
 add_executable(common_test
   strutil_test.cc
   )
 target_link_libraries(common_test
+  oniku_common
   onnx_proto
   protobuf
   gtest
