Find CUDA by find_package

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -3,9 +3,7 @@ include_directories(../optional-lite/include)
 include_directories(../onnx/.setuptools-cmake-build)
 include_directories(..)
 
-# TODO(hamaji): Find CUDA instead of using these fixed paths.
-include_directories(/usr/local/cuda/include)
-link_directories(/usr/local/cuda/lib64)
+include_directories(${CUDA_INCLUDE_DIRS})
 
 add_library(oniku_tools
   util.cc
@@ -37,7 +35,7 @@ target_link_libraries(run_onnx
   xchainer
   onnx_proto
   protobuf
-  cudart
+  ${CUDA_CUDART_LIBRARY}
   )
 set_target_properties(run_onnx PROPERTIES OUTPUT_NAME "run_onnx")
 
@@ -51,8 +49,8 @@ target_link_libraries(train_imagenet
   xchainer
   onnx_proto
   protobuf
-  cudart
   pthread
+  ${CUDA_CUDART_LIBRARY}
   ${OpenCV_LIBS}
   )
 set_target_properties(train_imagenet PROPERTIES OUTPUT_NAME "train_imagenet")
