--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-parameter")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
 find_package(OpenCV REQUIRED)
+find_package(CUDA REQUIRED)
 
 link_directories(onnx/.setuptools-cmake-build)
 link_directories(googletest/googletest)
