--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_custom_command(OUTPUT backprop_test_stamp
-                   COMMAND python3 scripts/gen_backprop_tests.py
-                   MAIN_DEPENDENCY gen_backprop_tests.py
+add_custom_command(OUTPUT backprop_test_oc_stamp
+                   COMMAND python3 scripts/gen_backprop_tests_oc.py
+                   MAIN_DEPENDENCY gen_backprop_tests_oc.py
                    DEPENDS onnx_chainer_util.py ../tools/npz_to_onnx.py
                    WORKING_DIRECTORY ..)
 
@@ -11,4 +11,4 @@ add_custom_command(OUTPUT mnist_mlp_stamp
                    WORKING_DIRECTORY ..)
 
 add_custom_target(gen_test_onnx ALL
-                  DEPENDS backprop_test_stamp mnist_mlp_stamp)
+                  DEPENDS backprop_test_oc_stamp mnist_mlp_stamp)
