--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -35,7 +35,7 @@ add_executable(runtime_test
 target_link_libraries(runtime_test
   oniku_runtime
   oniku_compiler
-  xchainer
+  chainerx
   onnx_proto
   protobuf
   gtest
