Start organizing compiler-related flags

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories(${CUDA_INCLUDE_DIRS})
 add_definitions(-DONNX_NAMESPACE=onnx)
 
 add_library(oniku_tools
+  compiler_flags.cc
   util.cc
   )
 
