Introduce GradientOpContext to gradient_ops.cc
This is preparation for stacking retained inputs/outputs in loops.

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -42,6 +42,7 @@ add_executable(compiler_test
 target_link_libraries(compiler_test
   oniku_compiler
   oniku_runtime
+  oniku_common
   onnx_proto
   protobuf
   gtest
