--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ execute_process(COMMAND git submodule update --init)
 
 enable_testing()
 
+add_definitions(-DONNX_ML=1)
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
@@ -15,6 +17,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
 find_package(OpenCV REQUIRED)
 find_package(CUDA REQUIRED)
+
+include_directories(onnx)
+include_directories(onnx/.setuptools-cmake-build)
 
 link_directories(onnx/.setuptools-cmake-build)
 link_directories(googletest/googletest)
