Drop support for split_axis and NStepBiLSTM
They need to be re-implemented.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,14 +102,14 @@ foreach(
     Linear
     MaxPool2d
     NpArray
-    NstepBiLSTM
+    #NstepBiLSTM
     NstepLSTM
     PadSequence
     Relu
     Reshape
     Sigmoid
     SoftmaxClossEntropy
-    SplitAxis
+    #SplitAxis
     SwapAxes
     Tanh
     #Vstack
