--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,7 @@ foreach(
     Dropout
     EmbedID
     ExpandDims
+    Hstack
     Id
     LRN
     Linear
@@ -112,7 +113,7 @@ foreach(
     SplitAxis
     SwapAxes
     Tanh
-    #Vstack
+    Vstack
     )
 
   gen_ch2o_test(node ${ch2o_test} ALL)
