Canonicalize subgraphs to use external values

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library(oniku_compiler
   recompute.cc
   scheduler.cc
   simplifier.cc
+  subgraph_canonicalizer.cc
   tensor.cc
   type.cc
   type_inference.cc
